package com.atguigu.strategy.improve;

public interface FlyBehavior {
    public void fly(); //子类具体实现
}
