package com.atguigu.strategy.improve;

public class GeGeQuackBehavior {
}
