package com.atguigu.strategy.improve;

public class NoQuackBehavior {
}
