package com.atguigu.strategy.improve;

public interface QuackBehavior {
}
