package com.atguigu.strategy.improve;

public class WildDuck extends Duck {
    @Override
    public void display() {
        System.out.println("这是野鸭");
    }
}
