@startuml

title __IMPROVE's Class Diagram__\n

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.BadFlyBehavior {
          + fly()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.Client {
          {static} + main()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      abstract class com.atguigu.strategy.improve.Duck {
          + Duck()
          {abstract} + display()
          + fly()
          + quack()
          + swim()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      interface com.atguigu.strategy.improve.FlyBehavior {
          {abstract} + fly()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.GaGaQuackBehavior {
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.GeGeQuackBehavior {
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.GoodFlyBehavior {
          + fly()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.NoFlyBehavior {
          + fly()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.NoQuackBehavior {
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.PekingDuck {
          + display()
          + fly()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      interface com.atguigu.strategy.improve.QuackBehavior {
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.ToyDuck {
          + display()
          + fly()
          + quack()
          + swim()
      }
    }
  }
  

  namespace com.atguigu.strategy {
    namespace improve {
      class com.atguigu.strategy.improve.WildDuck {
          + display()
      }
    }
  }
  

  com.atguigu.strategy.improve.BadFlyBehavior .up.|> com.atguigu.strategy.improve.FlyBehavior
  com.atguigu.strategy.improve.Duck o-- com.atguigu.strategy.improve.FlyBehavior : flyBehavior
  com.atguigu.strategy.improve.GoodFlyBehavior .up.|> com.atguigu.strategy.improve.FlyBehavior
  com.atguigu.strategy.improve.NoFlyBehavior .up.|> com.atguigu.strategy.improve.FlyBehavior
  com.atguigu.strategy.improve.PekingDuck -up-|> com.atguigu.strategy.improve.Duck
  com.atguigu.strategy.improve.ToyDuck -up-|> com.atguigu.strategy.improve.Duck
  com.atguigu.strategy.improve.WildDuck -up-|> com.atguigu.strategy.improve.Duck


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
